@@ -328,6 +328,8 @@ Version 1.6.16
 	* Pass output buffer size to addrToString and detect overflow.
 	* Handle addrToString error in configure_urlbase. 
 	* Handle overflow in http_SendMessage.
+	* Respect unique_service_name error in ssdp_request_type
+	  so as not to touch non-terminated buffer under Evt.
 	* Treat large argument as error in UpnpAddVirtualDir.
 	* Do not clear buffer before snprintf.
 	* Clarify the last argument of GetDescDocumentAndURL has size LINE_SIZE.
